--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			</div>
 			<div class="main-header__contactInfo column column--50">
 			  <p class="main-header__contantInfo__phone">
-			  	<span class="icon-phone"> 310-555-5555</span>
+			  	<span class="icono-phone"> 310-555-5555</span>
 			  </p>
 			  <p class="main-header__contantInfo__address">
 			  	<span class="icon-location"> Calle 20 15-30 B/ Centro</span>
@@ -25,7 +25,7 @@
 	</header>
 	<nav class="main-nav">
 	<div class="container container--flex">
-	<span class="icon-menu" id="btn-menu"></span>
+	<span class="icono-menu" id="btn-menu"></span>
 		<ul class="menu" id="menu">
 			<li class="menu__item"><a href="/" class="menu__link menu__link--select">Inico</a></li>
 			<li class="menu__item"><a href="nosotros.html" class="menu__link">Nosotros</a></li>
@@ -35,26 +35,26 @@
 		<div class="social-icon">
 			<a href="" class="social-icon__link"><span class="icon-fecebook"></span></a>
 			<a href="" class="social-icon__link"><span class="icon-tiwtter"></span></a>
-			<a href="" class="social-icon__link"><span class="icon-mail"></span></a>
+			<a href="" class="social-icon__link"><span class="icono-mail"></span></a>
 		</div>
 
 	</div>
 	</nav>
 
 	<section class="banner">
-		<img src="img/mueblesbanner.png" alt="" class="banner__img">
-		<div class="banner__content">Estilo y Confor en tu hogar y oficina</div>
+		<img src="img/bannermuebles.png" alt="" class="banner__img">
+		<div class="banner__content">Estilo y Confort en tu hogar y oficina</div>
 	</section>
 
 	<main class="main">
 		<section class="group group--color" >
 			<div class="container">
-				<h2 class="main__title">Bienbenido a Muebles Colombia FS</h2>
+				<h2 class="main__title">Bienvenido a Muebles Colombia FS</h2>
 				<p class="main__txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum repellat, eveniet ab doloribus necessitatibus, pariatur debitis ipsum tempore ipsa consectetur quas, reiciendis ex quae sint. Fugiat eaque eligendi corporis voluptate!</p>
 			</div>
 		</section>
 
-			<section class="group main_-about__description">
+			<section class="group main__about__description">
 				<div class="contanier contanier--flex">
 					<div class="column column--50">
 						<img src="img/sala-master1.png" alt="">
@@ -92,7 +92,7 @@
 				</div>
 			</section>
 
-		<p class="copy"><i>&#169;</i>Muebles Colombia| 2019-Todos los derechos reservados.</p>
+		<p class="copy"><i>&#169;</i> Muebles Colombia| 2019-Todos los derechos reservados.</p>
 
 	</main>
 	<footer class="main_footer">
