Se revisa archivo HTML en busca de errores los cuales se corrigen.

--- a/index.html
+++ b/index.html
@@ -1,119 +1,118 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-	<meta charset="UTF-8">
-	<title>Muebles de Colombia FS</title>
-	<meta name="viewport" content="width=device-width, user-scalable=yes, initial-scale=1.0, maximum-scale=1.0, minimum-scale=2.0">
-	<link rel="stylesheet" href="css/estilos.css">
-	<link rel="stylesheet" href="css/font.css">
+    <meta charset="UTF-8">
+    <title>Muebles de Colombia FS</title>
+    <meta name="viewport" content="width=device-width, user-scalable=yes, initial-scale=1.0, maximum-scale=2.5, minimum-scale=1.0">
+    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="css/font.css">
 </head>
+
 <body>
-	<header class="main-header">
-		<div class="container container--flex">
-			<div class="logo-container column column--50">
-			   <h1 class="logo"><i>&#128715;</i> Muebles de Colombia FS</h1>
-			</div>
-			<div class="main-header__contactInfo column column--50">
-			  <p class="main-header__contantInfo__phone">
-			  	<span class="icono-phone"> 310-555-5555</span>
-			  </p>
-			  <p class="main-header__contantInfo__address">
-			  	<span class="icon-location"> Calle 20 15-30 B/ Centro</span>
-			  </p>
-			</div>
-		</div>
-	</header>
-	<nav class="main-nav">
-	<div class="container container--flex">
-	<span class="icono-menu" id="btn-menu"></span>
-		<ul class="menu" id="menu">
-			<li class="menu__item"><a href="/" class="menu__link menu__link--select">Inico</a></li>
-			<li class="menu__item"><a href="nosotros.html" class="menu__link">Nosotros</a></li>
-			<li class="menu__item"><a href="galeria.html" class="menu__link">Galeria</a></li>
-			<li class="menu__item"><a href="contacto.html" class="menu__link">Contacto</a></li>
-		</ul>
-		<div class="social-icon">
-			<a href="" class="social-icon__link"><span class="icon-fecebook"></span></a>
-			<a href="" class="social-icon__link"><span class="icon-tiwtter"></span></a>
-			<a href="" class="social-icon__link"><span class="icono-mail"></span></a>
-		</div>
+    <header class="main-header">
+        <div class="container container--flex">
+            <div class="logo-container column column--50">
+                <h1 class="logo"><i>&#128715;</i> Muebles de Colombia FS</h1>
+            </div>
+            <div class="main-header__contactInfo column column--50">
+                <p class="main-header__contantInfo__phone">
+                    <span class="icon-phone"> 310-555-5555</span>
+                </p>
+                <p class="main-header__contantInfo__address">
+                    <span class="icon-location"> Calle 20 15-30 B/ Centro</span>
+                </p>
+            </div>
+        </div>
+    </header>
+    <nav class="main-nav">
+        <div class="container container--flex">
+            <span class="icon-menu" id="btn-menu"></span>
+            <ul class="menu" id="menu">
+                <li class="menu__item"><a href="/" class="menu__link menu__link--select">Inico</a></li>
+                <li class="menu__item"><a href="nosotros.html" class="menu__link">Nosotros</a></li>
+                <li class="menu__item"><a href="galeria.html" class="menu__link">Galeria</a></li>
+                <li class="menu__item"><a href="contacto.html" class="menu__link">Contacto</a></li>
+            </ul>
+            <div class="social-icon">
+                <a href="" class="social-icon__link"><span class="icon-facebook"></span></a>
+                <a href="" class="social-icon__link"><span class="icon-twitter"></span></a>
+                <a href="" class="social-icon__link"><span class="icon-mail"></span></a>
+            </div>
+        </div>
+    </nav>
 
-	</div>
-	</nav>
+    <section class="banner">
+        <img src="img/bannermuebles.png" alt="" class="banner__img">
+        <div class="banner__content">Estilo y Confort en tu hogar y oficina</div>
+    </section>
 
-	<section class="banner">
-		<img src="img/bannermuebles.png" alt="" class="banner__img">
-		<div class="banner__content">Estilo y Confort en tu hogar y oficina</div>
-	</section>
+    <main class="main">
+        <section class="group group--color">
+            <div class="container">
+                <h2 class="main__title">Bienvenido a Muebles Colombia FS</h2>
+                <p class="main__txt"> Muebles de Colombia ofrece a nuestra distinguida clientela muebles tanto para el hogar y oficina, con los ultimos modelos de acuerdo a las tendencias a nivel mundial, de la mejor calidad y al alcance de su bolsillo. </p>
+            </div>
+        </section>
 
-	<main class="main">
-		<section class="group group--color" >
-			<div class="container">
-				<h2 class="main__title">Bienvenido a Muebles Colombia FS</h2>
-				<p class="main__txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum repellat, eveniet ab doloribus necessitatibus, pariatur debitis ipsum tempore ipsa consectetur quas, reiciendis ex quae sint. Fugiat eaque eligendi corporis voluptate!</p>
-			</div>
-		</section>
+        <section class="group main__about__description">
+            <div class="contanier contanier--flex">
+                <div class="column column--50">
+                    <img src="img/principalcama-deko.png" alt="Cama Deko">
+                </div>
+                <div class="column column--50">
+                    <h3 class="colum__title">Expertos en muebles</h3>
+                    <p class="colum__txt">Muebles de Colombia ofrece a nuestra distinguida clientela muebles tanto para el hogar y oficina, con los ultimos modelos de acuerdo a las tendencias a nivel mundial, de la mejor calidad y al alcance de su bolsillo.</p>
+                    <a href="" class="btn btn--contact">Contacto</a>
+                </div>
+            </div>
+        </section>
+        <section class="group today-special">
+            <h2 class="today-special__title">Promociones de hoy</h2>
+            <div class="container container__flex">
+                <div class="column column--50-25">
+                    <img src="img/principalbookshelves.png" alt="Organizador Biblioteca Deko" class="today-special__img">
+                    <div class="today-special__title">Promoción Organizador Biblioteca Deko</div>
+                    <div class="today-especial__price">$400.000</div>
+                </div>
+                <div class="column column--50-25">
+                    <img src="img/principalcajonera-azul.png" alt="Cajonera Master" class="today-special__img">
+                    <div class="today-special__title">Promoción Mueble Cajonera Master</div>
+                    <div class="today-especial__price">$350.000</div>
+                </div>
+                <div class="column column--50-25">
+                    <img src="img/principalcama1.png" alt="Juego alcoba Master" class="today-special__img">
+                    <div class="today-special__title">Promoción Juego alcoba Master</div>
+                    <div class="today-especial__price">$1´500.000</div>
+                </div>
+                <div class="column column--50-25">
+                    <img src="img/principalespejo-oval.png" alt="Espejo Oval" class="today-special__img">
+                    <div class="today-special__title">Promoción Espejo Oval</div>
+                    <div class="today-especial__price">$200.000</div>
+                </div>
+            </div>
+        </section>
 
-			<section class="group main__about__description">
-				<div class="contanier contanier--flex">
-					<div class="column column--50">
-						<img src="img/sala-master1.png" alt="">
-					</div>
-					<div class="column column--50">
-						<h3 class="colum__title">Expertos en muebles</h3>
-						<p class="colum__txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis labore, corporis recusandae veritatis impedit, consequuntur natus magni, perferendis modi eveniet quas. Ad cupiditate maiores dolores inventore. Consectetur voluptas provident itaque omnis, autem pariatur veniam, assumenda blanditiis nisi mollitia odit facere. Cupiditate facilis minima hic dignissimos debitis sequi! Ipsa beatae, maxime.</p>
-						<a href="" class="btn btn--contact">Contacto</a>
-					</div>
-				</div>
-			</section>
-			<section class="group today-special">
-				<h2 class="today-special__title">Promociones de hoy</h2>
-				<div class="container container_-flex">
-					<div class="column column--50-25">
-						<img src="img/bookshelves.png" alt="" class="today-special_-img">
-						<div class="today-special__title">Promoción Biblioteca</div>
-						<div class="today-especial__price">$400.000</div>
-					</div>
-					<div class="column column--50-25">
-						<img src="img/cajonera-azul.png" alt="" class="today-special_-img">
-						<div class="today-special__title">Promoción Cajonera</div>
-						<div class="today-especial__price">$350.000</div>
-					</div>
-					<div class="column column--50-25">
-						<img src="img/cama-marter1.png" alt="" class="today-special_-img">
-						<div class="today-special__title">Promoción Juego alcoba</div>
-						<div class="today-especial__price">$1´500.000</div>
-					</div>
-					<div class="column column--50-25">
-						<img src="img/espejo-oval.png" alt="" class="today-special_-img">
-						<div class="today-special__title">Promoción Espejo Oval</div>
-						<div class="today-especial__price">$200.000</div>
-					</div>
-				</div>
-			</section>
-
-		<p class="copy"><i>&#169;</i> Muebles Colombia| 2019-Todos los derechos reservados.</p>
-
-	</main>
-	<footer class="main_footer">
-				<div class="contanier container--flex">
-					<div class="column colum--33">
-						<h2 class="column__title">¿Por qué visitarnos?</h2>
-						<p class="column__txt"></p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus quis debitis .
-					</div>
-					<div class="column colum_-33">
-						<h2 class="column__title">contactanos</h2>
-						<p class="column__txt">Calle 20 15-30 B/ Centro</p>
-						<p class="column__txt">310-555-5555</p>
-						<p class="column__txt">mueblescolombia@gmail.com</p>
-					</div>
-					<div class="column colum-_33">
-						<h2 class="column__title">Siguenos en:</h2>
-						<p class="column__txt"><a href="icon-facebook" class="icon-">Facebook</a></p>
-						<p class="column__txt"><a href="icon-Twitter" class="icon-">Twitter</a></p>
-						<p class="column__txt"><a href="icon-youtube" class="icon-">Nuestro Canal</a></p>
-					</div>
-				</div>
-			</footer>
-</body>
-</html>
+    </main>
+    <footer class="main_footer">
+        <div class="contanier container--flex">
+            <div class="column colum--33">
+                <h2 class="column__title">¿Por qué visitarnos?</h2>
+                <p class="column__txt"></p> Muebles de Colombia ofrece a nuestra distinguida clientela muebles tanto para el hogar y oficina, con los ultimos modelos de acuerdo a las tendencias a nivel mundial, de la mejor calidad y al alcance de su bolsillo.
+            </div>
+            <div class="column colum--33">
+                <h2 class="column__title">Contactanos</h2>
+                <p class="column__txt">Calle 20 15-30 B/ Centro</p>
+                <p class="column__txt">310-555-5555</p>
+                <p class="column__txt">mueblescolombia@gmail.com</p>
+            </div>
+            <div class="column colum--33">
+                <h2 class="column__title">Siguenos en:</h2>
+                <p class="column__txt"><a href="" class="icon-facebook"> Facebook</a></p>
+                <p class="column__txt"><a href="" class="icon-twitter"> Twitter</a></p>
+                <p class="column__txt"><a href="" class="icon-youtube"> Youtobe</a></p>
+            </div>
+            <p class="copy"><i>&#169;</i> Muebles de Colombia FS| 2019-Todos los derechos reservados.</p>
+        </div>
+    </footer>
+</body></html>
