--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </header>
     <nav class="main-nav">
         <div class="container container--flex">
-            <span class="icon-menu" id="btn-menu"></span>
+            <span class="icon-menu" id="btnmenu"></span>
             <ul class="menu" id="menu">
                 <li class="menu__item"><a href="/" class="menu__link menu__link--select">Inico</a></li>
                 <li class="menu__item"><a href="nosotros.html" class="menu__link">Nosotros</a></li>
@@ -115,4 +115,7 @@
             <p class="copy"><i>&#169;</i> Muebles de Colombia FS| 2019-Todos los derechos reservados.</p>
         </div>
     </footer>
-</body></html>
+
+    <scrpt src="js/menu.js"> </scrpt>
+</body>
+</html>
