Se corrigen errores del Script...para la animación del menú

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </header>
     <nav class="main-nav">
         <div class="container container--flex">
-            <span class="icon-menu" id="btnmenu"></span>
+            <span class="icon-menu" id="btn-menu"></span>
             <ul class="menu" id="menu">
                 <li class="menu__item"><a href="/" class="menu__link menu__link--select">Inico</a></li>
                 <li class="menu__item"><a href="nosotros.html" class="menu__link">Nosotros</a></li>
@@ -116,6 +116,5 @@
         </div>
     </footer>
 
-    <scrpt src="js/menu.js"> </scrpt>
-</body>
-</html>
+    <script src="js/menu.js"> </script>
+</body></html>
