Se  disminuye tamaño a algunas imagenes, se realizan arreglos a los estilos del CSS, se comienza a adptar responsive a partir del CSS.

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
                 <h1 class="logo"><i>&#128715;</i> Muebles de Colombia FS</h1>
             </div>
             <div class="main-header__contactInfo column column--50">
-                <p class="main-header__contantInfo__phone">
+                <p class="main-header__contactInfo__phone">
                     <span class="icon-phone"> 310-555-5555</span>
                 </p>
-                <p class="main-header__contantInfo__address">
+                <p class="main-header__contactInfo__address">
                     <span class="icon-location"> Calle 20 15-30 B/ Centro</span>
                 </p>
             </div>
@@ -56,20 +56,20 @@
         </section>
 
         <section class="group main__about__description">
-            <div class="contanier contanier--flex">
+            <div class="container container--flex">
                 <div class="column column--50">
                     <img src="img/principalcama-deko.png" alt="Cama Deko">
                 </div>
                 <div class="column column--50">
-                    <h3 class="colum__title">Expertos en muebles</h3>
-                    <p class="colum__txt">Muebles de Colombia ofrece a nuestra distinguida clientela muebles tanto para el hogar y oficina, con los ultimos modelos de acuerdo a las tendencias a nivel mundial, de la mejor calidad y al alcance de su bolsillo.</p>
+                    <h3 class="column__title">Expertos en muebles</h3>
+                    <p class="column__txt">Muebles de Colombia ofrece a nuestra distinguida clientela muebles tanto para el hogar y oficina, con los ultimos modelos de acuerdo a las tendencias a nivel mundial, de la mejor calidad y al alcance de su bolsillo.</p>
                     <a href="" class="btn btn--contact">Contacto</a>
                 </div>
             </div>
         </section>
         <section class="group today-special">
-            <h2 class="today-special__title">Promociones de hoy</h2>
-            <div class="container container__flex">
+            <h2 class="group__title">Promociones de hoy</h2>
+            <div class="container container--flex">
                 <div class="column column--50-25">
                     <img src="img/principalbookshelves.png" alt="Organizador Biblioteca Deko" class="today-special__img">
                     <div class="today-special__title">Promoción Organizador Biblioteca Deko</div>
@@ -94,7 +94,7 @@
         </section>
 
     </main>
-    <footer class="main_footer">
+    <footer class="main-footer">
         <div class="contanier container--flex">
             <div class="column colum--33">
                 <h2 class="column__title">¿Por qué visitarnos?</h2>
@@ -112,7 +112,7 @@
                 <p class="column__txt"><a href="" class="icon-twitter"> Twitter</a></p>
                 <p class="column__txt"><a href="" class="icon-youtube"> Youtobe</a></p>
             </div>
-            <p class="copy"><i>&#169;</i> Muebles de Colombia FS| 2019-Todos los derechos reservados.</p>
+            <p class="copy"><i>&#169;</i> Muebles de Colombia FS | 2019-Todos los derechos reservados.</p>
         </div>
     </footer>
 
