Se dan desde estilos.css los atributos reponsive a la pagina de inicio.

--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
             <h2 class="group__title">Promociones de hoy</h2>
             <div class="container container--flex">
                 <div class="column column--50-25">
-                    <img src="img/principalbookshelves.png" alt="Organizador Biblioteca Deko" class="today-special__img">
-                    <div class="today-special__title">Promoción Organizador Biblioteca Deko</div>
+                    <img src="img/principalbookshelves.png" alt="Organizador Libros" class="today-special__img">
+                    <div class="today-special__title">Promoción Deko Organizador Libros </div>
                     <div class="today-especial__price">$400.000</div>
                 </div>
                 <div class="column column--50-25">
@@ -86,9 +86,9 @@
                     <div class="today-especial__price">$1´500.000</div>
                 </div>
                 <div class="column column--50-25">
-                    <img src="img/principalespejo-oval.png" alt="Espejo Oval" class="today-special__img">
-                    <div class="today-special__title">Promoción Espejo Oval</div>
-                    <div class="today-especial__price">$200.000</div>
+                    <img src="img/principalespejo-oval.png" alt="Espejo de Roca Oval" class="today-special__img">
+                    <div class="today-special__title">Promoción Espejo de Roca Oval</div>
+                    <div class="today-especial__price">$150.000</div>
                 </div>
             </div>
         </section>
