--- a/index.html
+++ b/index.html
@@ -9,6 +9,23 @@
     <link rel="stylesheet" href="css/font.css">
 </head>
 
+<font size="2">
+     <script languaje="JavaScript">
+         var mydate=new Date()
+         var year=mydate.getYear()
+         if (year < 1000)
+             year+=1900
+         var day=mydate.getDay()
+         var month=mydate.getMonth()
+         var daym=mydate.getDate()
+         if (daym<10)
+             daym="0"+daym
+        var dayarray=new Array("Domingo,","Lunes,","Martes,","Miércoles,","Jueves,","Viernes,","Sábado,")
+        var montharray=new Array("Enero","Febrero","Marzo","Abril","Mayo","Junio","Julio","Agosto","Septiembre","Octubre","Noviembre","Diciembre")
+        document.write("<font color='black-blond' face='Georgia' style='font-size:10pt'>"+dayarray[day]+" "+daym+" de "+montharray[month]+" de "+year+"</font>")
+     </script>
+  </font>
+
 <body>
     <header class="main-header">
         <div class="container container--flex">
