--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
 </head>
 
 <font size="2">
-     <script languaje="JavaScript">
-         var mydate=new Date()
-         var year=mydate.getYear()
-         if (year < 1000)
-             year+=1900
-         var day=mydate.getDay()
-         var month=mydate.getMonth()
-         var daym=mydate.getDate()
-         if (daym<10)
-             daym="0"+daym
-        var dayarray=new Array("Domingo,","Lunes,","Martes,","Miércoles,","Jueves,","Viernes,","Sábado,")
-        var montharray=new Array("Enero","Febrero","Marzo","Abril","Mayo","Junio","Julio","Agosto","Septiembre","Octubre","Noviembre","Diciembre")
-        document.write("<font color='black-blond' face='Georgia' style='font-size:10pt'>"+dayarray[day]+" "+daym+" de "+montharray[month]+" de "+year+"</font>")
-     </script>
-  </font>
+    <script languaje="JavaScript">
+        var mydate = new Date()
+        var year = mydate.getYear()
+        if (year < 1000)
+            year += 1900
+        var day = mydate.getDay()
+        var month = mydate.getMonth()
+        var daym = mydate.getDate()
+        if (daym < 10)
+            daym = "0" + daym
+        var dayarray = new Array("Domingo,", "Lunes,", "Martes,", "Miércoles,", "Jueves,", "Viernes,", "Sábado,")
+        var montharray = new Array("Enero", "Febrero", "Marzo", "Abril", "Mayo", "Junio", "Julio", "Agosto", "Septiembre", "Octubre", "Noviembre", "Diciembre")
+        document.write("<font color='black-blond' face='Georgia' style='font-size:10pt'>" + dayarray[day] + " " + daym + " de " + montharray[month] + " de " + year + "</font>")
+    </script>
+</font>
 
 <body>
     <header class="main-header">
@@ -127,7 +127,7 @@
                 <h2 class="column__title">Siguenos en:</h2>
                 <p class="column__txt"><a href="" class="icon-facebook"> Facebook</a></p>
                 <p class="column__txt"><a href="" class="icon-twitter"> Twitter</a></p>
-                <p class="column__txt"><a href="" class="icon-youtube"> Youtobe</a></p>
+                <p class="column__txt"><a href="" class="icon-youtube"> Youtube</a></p>
             </div>
             <p class="copy"><i>&#169;</i> Muebles de Colombia FS | 2019-Todos los derechos reservados.</p>
         </div>
